# internal/clientgen/model_iam_service_get_group_response_get_group_result.go
@@ -1,0 +1,19 @@
+/*
+Dell ObjectScale/ECS Management API
+
+Generated from ECS source code metadata. Provides reliable schemas and examples for client generation.
+
+API version: 4.0.0
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package clientgen
+
+// IamServiceGetGroupResponseGetGroupResult struct for IamServiceGetGroupResponseGetGroupResult
+type IamServiceGetGroupResponseGetGroupResult struct {
+	Users       []string                                       `json:"Users,omitempty"`
+	IsTruncated *bool                                          `json:"IsTruncated,omitempty"`
+	Marker      *string                                        `json:"Marker,omitempty"`
+	Group       *IamServiceGetGroupResponseGetGroupResultGroup `json:"Group,omitempty"`
+}
